--- a/css/newcss.css
+++ b/css/newcss.css
@@ -257,6 +257,13 @@ ul .pages {
     background: #ffb70f;
     border: 2px solid #000000 !important;
 }
+
+
+ul .pages:hover{
+    border: 2px solid #848484 !important;
+    cursor: pointer;
+}
+
 ul .pages a:hover{
             color: #ffffff;
 }
@@ -377,13 +384,6 @@ ul {
     text-align: center;
 }
 
-ul .pages {
-    display: inline-block;
-    margin: 0px 10px;
-    border: 1px solid;
-    padding: 2px 6px;
-}
-
 .hello_user {
     background: rgba(0, 0, 0, 0) url(../images/gradient_light-1.png) repeat-x scroll 0 0;
     border: 1px solid #cecece;
@@ -399,4 +399,13 @@ ul .pages {
     height: auto;       
     background: #ffb70f;
     color: #fff;
+}
+
+.search_nav{
+    margin: 10px 0;
+}
+
+.search_nav div{
+    display: inline-block;
+    float: left;
 }
