--- a/css/newcss.css
+++ b/css/newcss.css
@@ -223,8 +223,22 @@ ul.dc_mm-orange{
     background: #000;
 }
 
-.search_box input[type="submit"]{
-    background: #ffb70f;
+.search_box .btn-submit{
+    background: #d8d8d8;
+        position: relative;
+        border: none;
+        cursor: pointer;
+        color: #000;
+        padding: 12px 20px;
+        /* height: 36px; */
+        margin: 0;
+        height: auto;
+        border-radius: 30px;
+            font-size: 16px;
+}
+.search_box .btn-submit:hover{
+    background: #000000;
+    color: #ffffff;
 }
 
 .search_box form{
@@ -237,14 +251,15 @@ ul.dc_mm-orange{
 }
 
 .search_box{
-    border: 1px solid #ffffff;
+    border: none;
 }
 
 .search_box input[type="text"] {
+    padding: 12px;
     width: 80%;
     outline: none;
-    border: 1px solid #ad00ff;
-    border-radius: 30px 0 0 30px;
+    border-radius: 30px;
+    background: #fff;
 }
 
 ul .pages {
@@ -305,6 +320,7 @@ ul .pages a {
 .ti-shopping-cart{
     font-size: 20px;
     color: #ff5829;
+    line-height: 30px !important;
 }
 
 .ti-shopping-cart:hover {
@@ -362,10 +378,12 @@ ul .pages a {
 }
 
 .wrapp-cart {
-    display: inline-block;
+    margin-top: 10px;
+    float: right;
+    display: block;
     background: #ffb70f;
     padding: 0px 10px;
-    border-radius: 0 30px 30px 0;
+    border-radius: 30px;
 }
 
 
@@ -380,8 +398,9 @@ ul .pages a {
 ul {
     display: block;
     width: 100%;
-    margin: 40px auto;
+    margin-bottom: 40px;
     text-align: center;
+    margin-top: 10px;
 }
 
 .hello_user {
@@ -402,10 +421,41 @@ ul {
 }
 
 .search_nav{
-    margin: 10px 0;
+    margin-top: 10px;
+    background: #999999;
+    height: 50px;
+    padding: 5px;
 }
 
 .search_nav div{
     display: inline-block;
     float: left;
+    margin-right: 4px;
 }
+
+.search_nav .selectbox{
+    height: 100%;
+    line-height: 40px;
+    margin: 0 20px 0 0;
+    color: #fff
+}
+
+.search_nav .selectbox select{
+    border-radius: 4px;
+    padding: 6px;
+}
+
+.pricefromto input{
+    border: none;
+    border-radius: 4px;
+        padding: 6px;
+    width: 35%;
+}
+
+.pricefromto{
+    width: 20%;
+}
+
+
+
+
